objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>PRX_Contract_Duration__c</fullName>
        <label>Contract Duration (in months)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRX_Quantity__c</fullName>
        <inlineHelpText>tbc</inlineHelpText>
        <label>Number of Items</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRX_Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>New revenue for new product/solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New revenue for existing product/solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing revenue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>